--- a/Parties/arb_fig.tex
+++ b/Parties/arb_fig.tex
@@ -2,8 +2,6 @@
 \section*{Arborescence des fichiers par figure:}
 \addcontentsline{toc}{section}{Arborescences des fichiers par figure}
 \label{sec:arb}
-Si le visualisateur de PDF utilisé est Adobe Acrobat, alors il est possible d'accéder au
-fichier directement en cliquant sur le lien. Autrement, il faudra suivre l'arborescence.
 \begin{itemize}[label=\textbullet]
 
     \item Figure (\ref{fig:const_file}):\href{run:./donnees_moteur.m}{donnees\_moteur.m}
@@ -65,4 +63,44 @@ fichier directement en cliquant sur le lien. Autrement, il faudra suivre l'arbor
     \item Figure (\ref{fig:sch_vit_psim_ass_cor_veri}):\href{run:./Asservissement de vitesse/PSIM/Systeme_complet_asservie_hacheur.psimsch}{/Asservissement de vitesse/PSIM/Systeme\_complet\_asservie\_hacheur.psimsch}
 
     \item Figure (\ref{fig:comp_courbe_v_asser}):\href{run:./Asservissement de vitesse/PSIM/Systeme_complet_asservie_hacheur.psimsch}{/Asservissement de vitesse/PSIM/Systeme\_complet\_asservie\_hacheur.psimsch}
+
+    \item Figure (\ref{fig:42}):\href{run:./Asservissement_Avec_Capteurs/Asservissement_Vitesse.slx}{/Asservissement\_Avec\_Capteurs}
+
+    \item Figure (\ref{fig:43}):\href{run:./Asservissement_Avec_Capteurs/Asservissement_Vitesse.slx}{/Comparaison\_PSIM\_MATLAB\_Sys\_Complet}
+
+    \item Figure (\ref{fig:44}):\href{run:./Comparaison_PSIM_MATLAB_Sys_Complet/Comparaison_PSIM_MATLAB.m}{/Comparaison\_PSIM\_MATLAB\_Sys\_Complet}
+
+    \item Figure (\ref{fig:45}):\href{run:./Comparaison_PSIM_MATLAB_Sys_Complet/Comparaison_PSIM_MATLAB.m}{/Comparaison\_PSIM\_MATLAB\_Sys\_Complet}
+
+    \item Figure (\ref{fig:53}):\href{run:./NE555/Systeme_complet_asservie_hacheur.psimsch}{/NE555}
+
+    \item Figure (\ref{fig:54}):\href{run:./NE555/Systeme_complet_asservie_hacheur.psimsch}{/NE555}
+
+    \item Figure (\ref{fig:56}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:59}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:60}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:61}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:62}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_PSIM}
+
+    \item Figure (\ref{fig:63}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:64}):\href{run:./Systeme_reelle_PSIM/Systeme_reel.psimsch}{/Systeme\_reelle\_PSIM}
+
+    \item Figure (\ref{fig:84}):\href{run:./test_preliminaire/Test.psimsch}{/test\_preliminaire}
+
+    \item Figure (\ref{fig:90}):\href{run:./Comparaison_Reelle_Simule/Comparaison_tachy_reel.m}{/Comparaison\_Reelle\_Simule}
+
+    \item Figure (\ref{fig:91}):\href{run:./Comparaison_Reelle_Simule/Comparaison_tachy_reel.m}{/Comparaison\_Reelle\_Simule}
+
+
+
+
+
+
+
+
 \end{itemize}
