--- a/Parties/final.tex
+++ b/Parties/final.tex
@@ -692,7 +692,7 @@ Pour ce faire, nous avons tout d'abord simulé sur PSIM ce qu'il se passerait si
     \centering
     \includegraphics[width=1\linewidth]{Images/Modelisation/PSIM/Test_preli.jpg}
     \caption{Schéma de test préliminaire sur PSIM}
-    \label{fig:placeholder}
+    \label{fig:84}
 \end{figure}
 Ensuite, nous avons réellement court-circuité ces condensateurs à l'aide d'une patte de résistance qui reliait leur borne. En plaçant en entrée un signal constant, nous avons pu mesurer la tension sur certains points importants et comparer à la simulation.
 \\
@@ -772,12 +772,12 @@ Par la suite, nous avons voulu comparer ces résultats avec nos simulations PSIM
 \begin{figure}[H]
     \centering    \includegraphics[width=0.8\linewidth]{Images/Modelisation/MATLAB/Tachy.png}
     \caption{Comparaison courbes réelle et théorique - dynamo-tachymétrique}
-    \label{fig:placeholder}
+    \label{fig:90}
 \end{figure}
 \begin{figure}[H]
     \centering    \includegraphics[width=1\linewidth]{Images/Modelisation/MATLAB/Codeur_corrige.png}
     \caption{Comparaison courbes réelle et théorique - codeur incrémental}
-    \label{fig:placeholder}
+    \label{fig:91}
 \end{figure}
 \textit{On a en abscisse le temps en seconde et en ordonnée l'image de la vitesse en volt}.\\ \\
 On constate de très bonnes correspondances entre ces courbes. Cela valide le fonctionnement correct de notre système complet.
